Fix: Correct --gts-vh usage and steps overflow

--- a/sass/blocks/_how-it-works.scss
+++ b/sass/blocks/_how-it-works.scss
@@ -4,17 +4,18 @@
 
 .how-it-works-block {
 	width: 100%;
-	height: calc(var(--gts-vh, 1vh) * 100);
+	height: var(--gts-vh, 100vh);
 	margin-top: $spacing-5xl;
 	background-color: transparent;
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
+	overflow: hidden;
 }
 
 .how-it-works-container {
 	@include container($container-max-width-content);
-	height: calc(var(--gts-vh, 1vh) * 100);
+	height: 100%;
 	display: flex;
 	align-items: flex-end;
 	justify-content: space-between;
@@ -55,12 +56,13 @@
 
 .how-it-works-right {
 	display: flex;
-	align-items: flex-end;
+	flex-direction: column;
+	justify-content: flex-end;
 	height: 100%;
-	flex: 0 0 690px;
-	max-width: 690px;
+	flex: 0 0 590px;
+	max-width: 590px;
 	margin-left: auto;
-	padding: $spacing-4xl 100px 0 0;
+	padding-right: 100px;
 	box-sizing: border-box;
 }
 
@@ -69,12 +71,11 @@
 	flex-direction: column;
 	gap: $spacing-lg;
 	width: 100%;
-	max-height: 100%;
+	height: 100%;
+	max-height: calc(var(--gts-vh, 100vh) - 80px);
 	overflow-y: auto;
 	overflow-x: hidden;
-	padding-right: $spacing-sm;
 	box-sizing: border-box;
-	scrollbar-gutter: stable;
 	-ms-overflow-style: none;
 	scrollbar-width: none;
 }
